@@ -1,5 +1,8 @@
 2009-07-22  Miloslav Trmač  <mitr@redhat.com>
 
+	* src/bridge.py (SignRpmRequestType.forward_reply_payload): Support
+	RSA and v4 signatures.
+
 	* src/double_tls.py (_CombiningBuffer.__receive_inner):
 	(_CombiningBuffer.__receive_outer, _InnerBridgingBuffer._receive):
 	Handle unexpected connection reset, and poll() that does not provide
